# embassy-imxrt

./: CODEOWNERS  Cargo.toml
examples/rt685s-evk/: Cargo.toml  build.rs
examples/rt685s-evk-performance-tracing/: Cargo.toml  README.md
examples/rt685s-evk-performance-tracing/.cargo/: config.toml
src/: clocks.rs  lib.rs  rng.rs  rtc.rs  timer.rs
src/flexspi/: nor.rs
src/hashcrypt/: hasher.rs
src/i2c/: master.rs
src/time_driver/: rtc.rs
supply-chain/: audits.toml  config.toml
